--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+    <title>Vancelyn Loh Mei Zhen Resume</title>
 </head>
 <body>
+    <!-- Navigation -->
+    <nav>
+        <h1></h1>
+        <ul id="nav">
+            <li>About</li>
+            <li>Experiences</li>
+            <li>Testimonials</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+
+    <main></main>
+
+
+
+
+    
     <h1>Vancelyn Loh</h1>
     <img src="./assets/images/vancelyn.png" alt="Vancelyn"/>
     <h2>Profile Summary</h2>
